Fix invisible input on iOS

--- a/src/app/modules/admin/pages/users/user/user.component.sass
+++ b/src/app/modules/admin/pages/users/user/user.component.sass
@@ -1,5 +1,8 @@
 @import ../../../../../../var
 
+::ng-deep div.users, *
+    -webkit-transform: translate3d(0, 0, 0)
+
 
 header
     display: block
