--- a/src/styles.sass
+++ b/src/styles.sass
@@ -44,6 +44,10 @@ mat-icon
         max-width: none !important
         width: 100vw !important
 
+.mat-datepicker-dialog
+    .mat-dialog-container
+        box-sizing: content-box
+
 
 .mat-dialog-container
     max-width: 560px
